@@ -199,14 +199,10 @@
 
 /* Inlines */
 #ifndef FORCEINLINE
-#if defined(_MSC_VER) && (_MSC_VER >= 1200)
+#if !defined(_MSC_VER) || (_MSC_VER >=1200)
 #define FORCEINLINE __forceinline
-#elif defined(_MSC_VER)
+#else
 #define FORCEINLINE __inline
-#elif defined(__cplusplus) /* __GNUG__ */
-#define FORCEINLINE inline __attribute__((always_inline))
-#else /* __GNUC__ */
-#define FORCEINLINE extern __inline__ __attribute__((always_inline))
 #endif
 #endif /* FORCEINLINE */
 
